# slack-off

./: pyproject.toml
docs/: a2e.md
src/slack_off/: __init__.py  __main__.py  db.py  operations.py  sandbox.py  views.py  workspace.py
tests/: conftest.py  test_db.py  test_db_crud.py  test_echo.py  test_home.py  test_new_channel.py  test_sandbox.py  test_views.py
