[project]
name = "slack-off"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.0.0",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
